# scanr

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  SKILL.md
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
docs/: real-world-tests.md
plugin/.claude-plugin/: plugin.json
plugin/skills/search/: SKILL.md
src/: chunk.rs  cli.rs  db.rs  embed.rs  git.rs  main.rs
src/commands/: clear.rs  index.rs  list.rs  mod.rs  reindex.rs  scan.rs  search.rs  setup.rs  status.rs  tree.rs
src/index/: chunk.rs  db.rs  embed.rs  git.rs  mod.rs
src/scan/: mod.rs  output.rs  output_test.rs  types.rs
src/scan/typescript/: extract.rs  extract_test.rs  mod.rs  parse.rs  parse_test.rs
